--- a/audio/rosegarden/Makefile
+++ b/audio/rosegarden/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2004/01/28 12:54:34 xtraeme Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/08 19:52:50 minskim Exp $
 
 DISTNAME=	rosegarden-2.1pl4
 PKGNAME=	rosegarden-2.1.4
@@ -19,5 +19,5 @@ USE_X11=	YES
 post-extract:
 	cd ${WRKSRC} && ${MV} Rosegarden Rosegarden.in
 
-.include "../../lang/tcl/buildlink2.mk"
+.include "../../lang/tcl83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
