--- a/chat/i2cb/Makefile
+++ b/chat/i2cb/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/01/20 12:09:35 agc Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/08 19:52:50 minskim Exp $
 #
 
 DISTNAME=	i2cb-6.0_ALPHA
@@ -28,6 +28,6 @@ do-install:
 		${WRKSRC}/contrib/echofile \
 		${PREFIX}/libdata/i2cb
 
-.include "../../lang/tcl/buildlink2.mk"
+.include "../../lang/tcl83/buildlink2.mk"
 .include "../../devel/readline/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
