--- a/databases/tcl-gdbm/Makefile
+++ b/databases/tcl-gdbm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2003/07/17 21:29:07 grant Exp $
+# $NetBSD: Makefile,v 1.13 2004/03/08 19:52:50 minskim Exp $
 #
 
 DISTNAME=	tclgdbm-0.8
@@ -10,7 +10,7 @@ MASTER_SITES=	http://www.graphviz.org/pub/tclgdbm/
 MAINTAINER=	bouyer@NetBSD.org
 COMMENT=	Tcl interface to gdbm - GNU database manager
 
-DEPENDS+=	tcl>=8.3.2:../../lang/tcl
+DEPENDS+=	tcl>=8.3.2:../../lang/tcl83
 DEPENDS+=	gdbm>=1.8.3:../../databases/gdbm
 
 GNU_CONFIGURE=		# defined
