--- a/devel/stooop/Makefile
+++ b/devel/stooop/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2003/07/17 21:34:07 grant Exp $
+# $NetBSD: Makefile,v 1.9 2004/03/08 19:52:51 minskim Exp $
 
 DISTNAME=	stooop-4.1.1
 CATEGORIES=	x11 tcl
@@ -8,7 +8,7 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://jfontain.free.fr/
 COMMENT=	Simple Tcl Only Object Oriented Programming scheme
 
-DEPENDS+=	tcl>=8.3.2:../../lang/tcl
+DEPENDS+=	tcl>=8.3.2:../../lang/tcl83
 
 NO_CONFIGURE=	yes
 NO_BUILD=	yes
