--- a/lang/tcl-expect/Makefile
+++ b/lang/tcl-expect/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2003/07/21 16:54:07 martti Exp $
+# $NetBSD: Makefile,v 1.15 2004/03/08 19:52:51 minskim Exp $
 #
 
 .include "Makefile.common"
@@ -9,7 +9,7 @@ CATEGORIES=	lang
 MAINTAINER=	jwise@NetBSD.org
 COMMENT=	Extensions to Tcl to support scripting of interactive programs
 
-DEPENDS+=	tcl>=8.3.2:../../lang/tcl
+DEPENDS+=	tcl>=8.3.2:../../lang/tcl83
 
 CONFLICTS+=	expect-[0-9]*
 
