--- a/lang/tcl-tclX/Makefile
+++ b/lang/tcl-tclX/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2004/01/20 12:19:18 agc Exp $
+# $NetBSD: Makefile,v 1.16 2004/03/08 19:52:51 minskim Exp $
 #
 
 DISTNAME=	tclX8.2.0
@@ -29,7 +29,7 @@ MAKE_ENV+=		GTAR=${GTAR} CHOWN=${CHOWN} CHMOD=${CHMOD} \
 post-extract:
 	@${MV} ${WRKSRC}/../doc/Memory.n ${WRKSRC}/../doc/TclXMemory.n
 	@if [ ! -e ${_PKGSRCDIR}/lang/tcl/${WRKDIR:T}/tcl8.3.4 ]; then	\
-		cd ../../lang/tcl && ${MAKE} extract;			\
+		cd ../../lang/tcl83 && ${MAKE} extract;			\
 	fi
 
 post-build:
@@ -45,7 +45,7 @@ post-install:
 # so...
 
 pre-clean:
-	@cd ../../lang/tcl && ${MAKE} clean
+	@cd ../../lang/tcl83 && ${MAKE} clean
 
-.include "../../lang/tcl/buildlink2.mk"
+.include "../../lang/tcl83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
