--- a/lang/tk-tclX/Makefile
+++ b/lang/tk-tclX/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2004/01/20 12:19:18 agc Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/08 19:52:51 minskim Exp $
 #
 
 DISTNAME=	tclX8.2.0
@@ -37,14 +37,14 @@ PATCHDIR=	${.CURDIR}/../../lang/tcl-tclX/patches
 post-extract:
 	${MV} ${WRKSRC}/../doc/Memory.n ${WRKSRC}/../doc/TclXMemory.n
 	@if [ ! -e ${_PKGSRCDIR}/lang/tcl/${WRKDIR:T}/tcl8.3.4 ]; then	\
-		cd ../../lang/tcl && ${MAKE} extract;			\
+		cd ../../lang/tcl83 && ${MAKE} extract;			\
 	fi
 	@if [ ! -e ${_PKGSRCDIR}/x11/tk/${WRKDIR:T}/tk8.3.4 ]; then	\
 		cd ../../x11/tk && ${MAKE} extract;			\
 	fi
 
 pre-clean:
-	@cd ../../lang/tcl && ${MAKE} clean
+	@cd ../../lang/tcl83 && ${MAKE} clean
 	@cd ../../x11/tk && ${MAKE} clean
 
 do-build:
