--- a/security/zebedee/Makefile
+++ b/security/zebedee/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2004/01/24 15:00:22 grant Exp $
+# $NetBSD: Makefile,v 1.13 2004/03/08 19:52:51 minskim Exp $
 #
 
 DISTNAME=		zebedee-2.3.1
@@ -20,7 +20,7 @@ MAKE_FLAGS=		OS=${LOWER_OPSYS}
 
 .include "../../archivers/bzip2/buildlink2.mk"
 .include "../../devel/zlib/buildlink2.mk"
-.include "../../lang/tcl/buildlink2.mk"
+.include "../../lang/tcl83/buildlink2.mk"
 .include "../../security/openssl/buildlink2.mk"
 
 .include "../../mk/bsd.pkg.mk"
