--- a/x11/py-Tk/Makefile
+++ b/x11/py-Tk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2003/07/28 09:23:55 drochner Exp $
+# $NetBSD: Makefile,v 1.25 2004/03/08 19:52:52 minskim Exp $
 #
 
 PKGNAME=	${PYPKGPREFIX}-Tk-0
@@ -32,7 +32,7 @@ do-patch:
 
 .include "../../lang/python/extension.mk"
 .include "../../lang/python/srcdist.mk"
-.include "../../lang/tcl/buildlink2.mk"
+.include "../../lang/tcl83/buildlink2.mk"
 .include "../../x11/tk/buildlink2.mk"
 
 .include "../../mk/bsd.pkg.mk"
