--- a/lang/tcl/Makefile
+++ b/lang/tcl/Makefile
@@ -1,23 +1,20 @@
-# $NetBSD: Makefile,v 1.25 2004/02/09 23:19:27 minskim Exp $
+# $NetBSD: Makefile,v 1.26 2004/03/08 19:55:35 minskim Exp $
 #
 
-DISTNAME=		tcl8.3.4
-PKGNAME=		tcl-8.3.4
+DISTNAME=		tcl8.4.5-src
+PKGNAME=		tcl-8.4.5
 CATEGORIES=		lang
-MASTER_SITES=		ftp://ftp.scriptics.com/pub/tcl/tcl8_3/ \
-			ftp://gd.tuwien.ac.at/languages/tcl/scriptics/tcl8_3/ \
-			ftp://ftp.funet.fi/pub/languages/tcl/tcl/tcl8_3/ \
-			ftp://ftp.mpi-sb.mpg.de/pub/tcl/mirror/ftp.scriptics.com/tcl8_3/
+MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=tcl/}
 
 MAINTAINER=		jwise@NetBSD.org
-HOMEPAGE=		http://www.tcltk.com/
+HOMEPAGE=		http://www.tcl.tk/
 COMMENT=		Ousterhout's Tool Command Language, a scripting language
 
 CONFLICTS+=		tclman80-[0-9]*
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
-WRKSRC=			${WRKDIR}/${DISTNAME}/unix
+WRKSRC=			${WRKDIR}/${DISTNAME:C/-src//}/unix
 GNU_CONFIGURE=		yes
 MAKE_ENV+=		TOUCH="${TOUCH}"
 TEST_TARGET=		test
@@ -62,7 +59,7 @@ post-patch:
 	${MV} -f mkLinks mkLinks.tmp;					\
 	${GREP} -v "^exit 0" mkLinks.tmp > mkLinks;			\
 	${CAT} mkLinks.tmp						\
-		| ${AWK} '/^  *ln / { print $$2 }'			\
+		| ${AWK} '/^  *ln / { print $$3 }'			\
 		| ${SORT} -u						\
 		| ${GREP} -v ".*\.n"					\
 		| ${SED} -e "s,^,${RM} -f ,"				\
@@ -72,7 +69,7 @@ post-patch:
 
 pre-install:
 	cd ${WRKSRC}; for file in					\
-		tclUnixInit.o libtcl83.so tclsh;			\
+		tclUnixInit.o libtcl84.so tclsh;			\
 	do								\
 		${TOUCH} $${file};					\
 	done
@@ -80,7 +77,7 @@ pre-install:
 post-install:
 	cd ${WRKDIR} && ${PAX} -rwpm man ${PREFIX}
 	${RM} -rf ${WRKDIR}/man
-	cd ${PREFIX}/bin && ${LN} -s tclsh8.3 tclsh
+	cd ${PREFIX}/bin && ${LN} -s tclsh8.4 tclsh
 	${INSTALL_DATA_DIR} ${PREFIX}/include/tcl
 	${INSTALL_DATA_DIR} ${PREFIX}/include/tcl/unix
 	${INSTALL_DATA_DIR} ${PREFIX}/include/tcl/generic
