--- a/x11/tk/Makefile
+++ b/x11/tk/Makefile
@@ -1,18 +1,17 @@
-# $NetBSD: Makefile,v 1.28 2004/03/08 19:52:52 minskim Exp $
+# $NetBSD: Makefile,v 1.29 2004/03/08 20:29:43 minskim Exp $
 
-DISTNAME=	tk8.3.4
-PKGNAME=	tk-8.3.4
+DISTNAME=	tk8.4.5-src
+PKGNAME=	tk-8.4.5
 CATEGORIES=	x11
-MASTER_SITES=	ftp://ftp.scriptics.com/pub/tcl/tcl8_3/ \
-		ftp://ftp.informatik.uni-hamburg.de/pub/soft/lang/tcl/tcl8_3/
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=tcl/}
 
 MAINTAINER=	jwise@NetBSD.org
-HOMEPAGE=	http://www.tcltk.com/
+HOMEPAGE=	http://www.tcl.tk/
 COMMENT=	Graphical toolkit for TCL
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
-WRKSRC=			${WRKDIR}/${DISTNAME}/unix
+WRKSRC=			${WRKDIR}/${DISTNAME:C/-src//}/unix
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--with-tcl=${BUILDLINK_PREFIX.tcl}/lib
 MAKE_ENV+=		TOUCH="${TOUCH}"
@@ -35,7 +34,7 @@ post-patch:
 	${MV} -f mkLinks mkLinks.tmp;					\
 	${GREP} -v "^exit 0" mkLinks.tmp > mkLinks;			\
 	${CAT} mkLinks.tmp						\
-		| ${AWK} '/^  *ln / { print $$2 }'			\
+		| ${AWK} '/^  *ln / { print $$3 }'			\
 		| ${SORT} -u						\
 		| ${GREP} -v ".*\.n"					\
 		| ${SED} -e "s,^,${RM} -f ,"				\
@@ -45,7 +44,7 @@ post-patch:
 
 pre-install:
 	cd ${WRKSRC}; for file in					\
-		tkUnixInit.o libtk83.so wish;				\
+		tkUnixInit.o libtk84.so wish;				\
 	do								\
 		${TOUCH} $${file};					\
 	done
@@ -54,7 +53,7 @@ post-install:
 	cd ${WRKDIR} && ${PAX} -rwpm man ${PREFIX}
 	${RM} -rf ${WRKDIR}/man
 	${RM} -f ${PREFIX}/bin/wish
-	cd ${PREFIX}/bin && ${LN} -s wish8.3 wish
+	cd ${PREFIX}/bin && ${LN} -s wish8.4 wish
 	${INSTALL_DATA_DIR} ${PREFIX}/include/tk
 	${INSTALL_DATA_DIR} ${PREFIX}/include/tk/generic
 	${INSTALL_DATA_DIR} ${PREFIX}/include/tk/unix
@@ -81,9 +80,10 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/../generic/tkScrollbar.h ${PREFIX}/include/tk/generic
 	${INSTALL_DATA} ${WRKSRC}/../generic/tkSelect.h ${PREFIX}/include/tk/generic
 	${INSTALL_DATA} ${WRKSRC}/../generic/tkText.h ${PREFIX}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/../generic/tkUndo.h ${PREFIX}/include/tk/generic
 	${INSTALL_DATA} ${WRKSRC}/../unix/tkUnixDefault.h ${PREFIX}/include/tk/unix
 	${INSTALL_DATA} ${WRKSRC}/../unix/tkUnixInt.h ${PREFIX}/include/tk/unix
 	${INSTALL_DATA} ${WRKSRC}/../unix/tkUnixPort.h ${PREFIX}/include/tk/unix
 
-.include "../../lang/tcl83/buildlink3.mk"
+.include "../../lang/tcl/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
