--- a/devel/automake/Makefile
+++ b/devel/automake/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.49 2004/02/13 22:55:40 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.50 2004/03/08 20:42:17 wiz Exp $
 #
 
-DISTNAME=	automake-1.8.2
+DISTNAME=	automake-1.8.3
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNU:=automake/} \
 		ftp://sources.redhat.com/pub/automake/
