--- a/meta-pkgs/kde3/Makefile
+++ b/meta-pkgs/kde3/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2004/02/28 18:26:21 jmmv Exp $
+# $NetBSD: Makefile,v 1.18 2004/03/08 20:55:07 jmmv Exp $
 
 DISTNAME=	kde-3.2.0
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	meta-pkgs x11 kde
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -12,16 +12,16 @@ COMMENT=	"meta-package" for the KDE integrated X11 desktop
 
 DEPENDS+=	kdeaccessibility-3.2.0:../../misc/kdeaccessibility3
 DEPENDS+=	kdeartwork-3.2.0:../../misc/kdeartwork3
-DEPENDS+=	kdeaddons-3.2.0nb1:../../misc/kdeaddons3
-DEPENDS+=	kdeadmin-3.2.0:../../misc/kdeadmin3
-DEPENDS+=	kdeedu-3.2.0:../../misc/kdeedu3
-DEPENDS+=	kdegames-3.2.0:../../games/kdegames3
-DEPENDS+=	kdegraphics-3.2.0nb1:../../graphics/kdegraphics3
-DEPENDS+=	kdemultimedia-3.2.0nb1:../../multimedia/kdemultimedia3
-DEPENDS+=	kdenetwork-3.2.0:../../net/kdenetwork3
-DEPENDS+=	kdepim-3.2.0nb1:../../misc/kdepim3
-DEPENDS+=	kdetoys-3.2.0:../../games/kdetoys3
-DEPENDS+=	kdeutils-3.2.0nb1:../../misc/kdeutils3
+DEPENDS+=	kdeaddons-3.2.0nb2:../../misc/kdeaddons3
+DEPENDS+=	kdeadmin-3.2.0nb1:../../misc/kdeadmin3
+DEPENDS+=	kdeedu-3.2.0nb1:../../misc/kdeedu3
+DEPENDS+=	kdegames-3.2.0nb1:../../games/kdegames3
+DEPENDS+=	kdegraphics-3.2.0nb2:../../graphics/kdegraphics3
+DEPENDS+=	kdemultimedia-3.2.0nb2:../../multimedia/kdemultimedia3
+DEPENDS+=	kdenetwork-3.2.0nb1:../../net/kdenetwork3
+DEPENDS+=	kdepim-3.2.0nb2:../../misc/kdepim3
+DEPENDS+=	kdetoys-3.2.0nb1:../../games/kdetoys3
+DEPENDS+=	kdeutils-3.2.0nb2:../../misc/kdeutils3
 DEPENDS+=	quanta-3.2.0:../../www/quanta3
 
 EXTRACT_ONLY=	# empty
