--- a/meta-pkgs/gnome-extras/Makefile
+++ b/meta-pkgs/gnome-extras/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2004/03/07 22:11:35 jmmv Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/08 21:03:55 jmmv Exp $
 
 DISTNAME=	gnome-extras-2.4.2
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	meta-pkgs x11 gnome
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -11,10 +11,13 @@ HOMEPAGE=	http://www.gnome.org/
 COMMENT=	Meta-package for applications related to the GNOME desktop
 
 DEPENDS+=	abiword>=2.0.2:../../editors/abiword
+DEPENDS+=	balsa>=2.0.10:../../mail/balsa2
 DEPENDS+=	conglomerate>=0.7.6nb6:../../editors/conglomerate
 DEPENDS+=	evolution>=1.4.5:../../mail/evolution
 DEPENDS+=	gaim>=0.75:../../chat/gaim
-DEPENDS+=	gnome>=2.4.2:../../meta-pkgs/gnome
+DEPENDS+=	glade2>=2.0.0:../../devel/glade2
+DEPENDS+=	gnome>=2.4.2nb3:../../meta-pkgs/gnome
+DEPENDS+=	gnome-audio>=2.0.0:../../audio/gnome-audio
 DEPENDS+=	gqview>=1.3.8:../../graphics/gqview
 DEPENDS+=	mergeant>=0.12.1:../../databases/mergeant
 DEPENDS+=	pan>=0.14.2:../../news/pan
