--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.68 2004/02/27 15:12:30 wiz Exp $
+# $NetBSD: Makefile,v 1.69 2004/03/08 23:45:12 ben Exp $
 #
 
 COMMENT=	Archivers
@@ -46,6 +46,7 @@ SUBDIR+=	pax
 SUBDIR+=	php4-bz2
 SUBDIR+=	php4-zip
 SUBDIR+=	php4-zlib
+SUBDIR+=	ppmd
 SUBDIR+=	ppunpack
 SUBDIR+=	rar
 SUBDIR+=	rar-linux
