--- a/devel/tcl-tclcl/Makefile
+++ b/devel/tcl-tclcl/Makefile
@@ -1,25 +1,32 @@
-# $NetBSD: Makefile,v 1.7 2004/03/08 20:27:14 minskim Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/08 23:49:41 minskim Exp $
 
-DISTNAME=	tclcl-src-1.0b13
-PKGNAME=	tcl-${DISTNAME:S/b/rc/:S/-src//}
+DISTNAME=	tclcl-src-1.15
+PKGNAME=	tcl-${DISTNAME:S/-src//}
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=otcl-tclcl/}
 
-MAINTAINER=	tech-pkg@NetBSD.org
+MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://otcl-tclcl.sourceforge.net/tclcl/
 COMMENT=	Tcl/C++ interface used by ns and nam
 
-WRKSRC=			${WRKDIR}/${DISTNAME:S/-src//}
-GNU_CONFIGURE=		yes
-USE_LIBTOOL=		yes
-USE_BUILDLINK2=		yes
-USE_X11=		yes
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
+WRKSRC=		${WRKDIR}/${DISTNAME:S/-src//}
+USE_BUILDLINK3=	yes
+USE_LANGUAGES=	c c++
+GNU_CONFIGURE=	yes
+USE_LIBTOOL=	yes
+USE_X11=	yes
 
 CONFIGURE_ARGS+=	--with-tcl=${BUILDLINK_PREFIX.tcl}
 CONFIGURE_ARGS+=	--with-tk=${BUILDLINK_PREFIX.tk}
+CONFIGURE_ARGS+=	--with-otcl=${BUILDLINK_PREFIX.tcl-otcl}
 
 CPPFLAGS+=	-I${BUILDLINK_PREFIX.tcl}/include/tcl/generic
 
-.include  "../../lang/tcl-otcl/buildlink2.mk"
-.include "../../x11/tk83/buildlink2.mk"
+INSTALLATION_DIRS=	bin include lib
+
+.include "../../lang/tcl/buildlink3.mk"
+.include "../../lang/tcl-otcl/buildlink3.mk"
+.include "../../x11/tk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
