--- a/net/ns/Makefile
+++ b/net/ns/Makefile
@@ -1,28 +1,42 @@
-# $NetBSD: Makefile,v 1.12 2004/03/08 20:27:15 minskim Exp $
+# $NetBSD: Makefile,v 1.13 2004/03/08 23:55:23 minskim Exp $
 
-DISTNAME=	ns-src-2.26
+DISTNAME=	ns-src-2.27
 PKGNAME=	${DISTNAME:S/-src//}
-PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	http://www.isi.edu/nsnam/dist/
 
-MAINTAINER=	tech-pkg@NetBSD.org
+MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://www.isi.edu/nsnam/ns/
 COMMENT=	The UCB/LBNL Network Simulator Version 2
 
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
 WRKSRC=		${WRKDIR}/${DISTNAME:S/-src//}
+USE_BUILDLINK3=	yes
+USE_LANGUAGES=	c c++
 GNU_CONFIGURE=	yes
-USE_BUILDLINK2=	yes
 USE_X11=	yes
-PTHREAD_OPTS+=		require
+PTHREAD_OPTS+=	require
 # Perl is only needed if you want to run the validation tests.
 #USE_PERL5=		build
 
 CONFIGURE_ARGS+=	--with-tcl=${BUILDLINK_PREFIX.tcl}
+CONFIGURE_ARGS+=	--with-tcl-ver=8.4
 CONFIGURE_ARGS+=	--with-tk=${BUILDLINK_PREFIX.tk}
+CONFIGURE_ARGS+=	--with-tk-ver=8.4
+CONFIGURE_ARGS+=	--with-otcl=${BUILDLINK_PREFIX.tcl-otcl}
 CONFIGURE_ARGS+=	--with-tclcl=${BUILDLINK_PREFIX.tcl-tclcl}
 
 MESSAGE_SUBST+=		HOMEPAGE=${HOMEPAGE}
+
+INSTALLATION_DIRS=	bin man/man1
+
+.include "../../devel/tcl-tclcl/buildlink3.mk"
+.include "../../lang/tcl/buildlink3.mk"
+.include "../../lang/tcl-otcl/buildlink3.mk"
+.include "../../net/libpcap/buildlink3.mk"
+.include "../../x11/tk83/buildlink3.mk"
+.include "../../mk/pthread.buildlink3.mk"
 
 # Remove a left over executable in the source tarball.
 post-extract:
@@ -33,9 +47,4 @@ post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/html/ns
 	${INSTALL_DATA} ${WRKSRC}/CHANGES.html ${PREFIX}/share/doc/html/ns
 
-.include  "../../net/libpcap/buildlink2.mk"
-.include  "../../devel/tcl-tclcl/buildlink2.mk"
-.include  "../../lang/tcl-otcl/buildlink2.mk"
-.include "../../x11/tk83/buildlink2.mk"
-.include "../../mk/pthread.buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
